<resources>
    <string name="app_name">EJERCICIO_CIUDADES</string>
    <string name="nueva_provincia">NUEVA PROVINCIA</string>
    <string name="nombre">NOMBRE:</string>
    <string name="insertar_provincia">INSERTAR PROVINCIA</string>
    <string name="borrar_provincia">BORRAR PROVINCIA</string>
    <string name="actualizar_provincia">Actualizar provincia</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="id">ID:</string>
    <string name="lista_de_ciudades">LISTA DE CIUDADES</string>
    <string name="ciudad">ciudad</string>
    <string name="habitantes">HABITANTES:</string>
    <string name="provincia">PROVINCIA:</string>
    <string name="mostrar_ciudades">MOSTRAR CIUDADES</string>
    <string name="detalles_ciudad">DETALLES CIUDAD</string>
</resources>