<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgCiudad"
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:contentDescription="@string/ciudad"
            app:srcCompat="@drawable/ciudad" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNombre"
                android:layout_width="250dp"
                android:layout_height="52dp"
                android:text="@string/nombre"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/txtHabitantes"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:text="@string/habitantes"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtProvincia"
                android:layout_width="250dp"
                android:layout_height="49dp"
                android:text="@string/provincia"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>