<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActualizarProvinciaActivity2">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="280dp"
        android:layout_height="67dp"
        android:layout_marginTop="40dp"
        android:text="@string/actualizar_provincia"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtProvinciaID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/id"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/edtProvinciaNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edtProvinciaID"
        app:layout_constraintStart_toStartOf="@+id/edtProvinciaID"
        app:layout_constraintTop_toBottomOf="@+id/edtProvinciaID" />

    <Button
        android:id="@+id/btActualizar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/actualizar_provincia"
        android:onClick="actualizarDatosProvinciaActivity2"
        app:layout_constraintEnd_toEndOf="@+id/edtProvinciaNombre"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/edtProvinciaNombre"
        app:layout_constraintTop_toBottomOf="@+id/edtProvinciaNombre" />

</androidx.constraintlayout.widget.ConstraintLayout>